--- a/src/route/hello.html
+++ b/src/route/hello.html
@@ -12,7 +12,7 @@
     <div id="head">
         <div class="main_head">
             <div class="head_left">
-                <a href="/">Trang Chủ</a>
+                <a href="/datancut/">Trang Chủ</a>
                 <a href="/src/route/Thanh.html">Mê Phim Hàn</a>
                 <a href="/src/route/hello.html">Mê Phim Campuchia</a>
                 <a href="">Mê Phim Việt</a>
