--- a/src/route/hello.html
+++ b/src/route/hello.html
@@ -14,7 +14,7 @@
             <div class="head_left">
                 <a href="/datancut/">Trang Chủ</a>
                 <a href="/src/route/Thanh.html">Mê Phim Hàn</a>
-                <a href="/src/route/hello.html">Mê Phim Campuchia</a>
+                <a href="/datancut/src/route/hello.html">Mê Phim Campuchia</a>
                 <a href="">Mê Phim Việt</a>
                 <a href="">Mê Phim Lào</a>
             </div>
