--- a/src/route/Thanh.html
+++ b/src/route/Thanh.html
@@ -13,8 +13,8 @@
         <div class="main_head">
             <div class="head_left">
                 <a href="/datancut/">Trang Chủ</a>
-                <a href="/datancut/src/route/Thanh.html">Mê Phim Hàn</a>
-                <a href="/src/route/hello.html">Mê Phim Campuchia</a>
+                <a href="">Mê Phim Hàn</a>
+                <a href="/datancut/src/route/hello.html">Mê Phim Campuchia</a>
                 <a href="">Mê Phim Việt</a>
                 <a href="">Mê Phim Lào</a>
             </div>
